--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <form id="loginForm">
                 <div class="input-grp">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="email" id="loginEmail" placeholder="Email" required>
+                    <input type="email" id="loginEmail" placeholder="Masukkan Email Anda" required>
                 </div>
                 <div class="input-grp">
                     <i class="fa-solid fa-lock"></i>
