Modify login input to accept email or name
Updated login form to accept either email or full name.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <h3>Login</h3>
             <form id="loginForm">
                 <div class="input-grp">
-                    <i class="fa-solid fa-envelope"></i>
-                    <input type="email" id="loginEmail" placeholder="Masukkan Email Anda" required>
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="loginEmail" placeholder="Email atau Nama Lengkap" required>
                 </div>
                 <div class="input-grp">
                     <i class="fa-solid fa-lock"></i>
@@ -125,3 +125,4 @@
     </script>
 </body>
 </html>
+
