--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="profile">
                 <img src="user.jpg" alt="User">
-                <button onclick="logout()" class="btn-logout">LogOut</button>
+                <button id="logoutBtn" class="btn-logout">LogOut</button>
             </div>
         </header>
 
@@ -125,5 +125,6 @@
     </script>
 </body>
 </html>
+
 
 
