--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storage Tasks - Liquid Glass</title>
+    <title>Storage Tasks</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.1"></script>
@@ -68,6 +68,7 @@
                 <div class="pill-input">
                     <i class="fa-solid fa-check-circle"></i>
                     <input type="password" id="regVerify" placeholder="Verification password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i>
                 </div>
 
                 <div class="auth-actions">
@@ -79,10 +80,9 @@
     </section>
 
     <section id="dashboardPage" class="dashboard-layout hidden">
-        
         <header class="top-nav">
             <div class="brand-area">
-                <img src="logo.png" alt="Logo">
+                <img src="logo.png" alt="Logo" style="height: 50px;"> 
             </div>
             <div class="profile-area">
                 <img src="user.jpg" alt="User" class="avatar">
@@ -91,11 +91,10 @@
         </header>
 
         <div class="main-glass-panel">
-            
             <div class="toolbar-row">
-                <div class="new-btn-wrapper dropdown">
-                    <button class="btn-pill new-btn"><i class="fa-solid fa-plus"></i> New</button>
-                    <div class="dropdown-content">
+                <div class="new-btn-wrapper" id="dropdownContainer">
+                    <button class="btn-pill new-btn" onclick="toggleDropdown()"><i class="fa-solid fa-plus"></i> New</button>
+                    <div id="dropdownMenu" class="dropdown-content">
                         <a onclick="createFolder()"><i class="fa-solid fa-folder-plus"></i> Folder Baru</a>
                         <label for="fileUpload"><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</label>
                         <input type="file" id="fileUpload" hidden>
@@ -110,25 +109,19 @@
 
             <div class="content-header">
                 <div class="storage-widget">
-                    <div class="storage-label">
-                        <i class="fa-solid fa-cloud"></i> Storage
-                    </div>
+                    <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
                     <div class="progress-track">
                         <div id="storageBar" class="progress-fill" style="width: 0%;"></div>
                     </div>
-                    <div class="storage-text">
-                        <span id="storageUsed">0 MB</span> / 2 GB
-                    </div>
+                    <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
 
                 <div class="breadcrumb-area">
-                    <h2 id="breadcrumb">Welcome In Drive Morning</h2>
+                    <h2 id="welcomeText">Welcome In Drive</h2>
                 </div>
             </div>
 
-            <div id="fileGrid" class="file-grid-area">
-                </div>
-
+            <div id="fileGrid" class="file-grid-area"></div>
         </div>
     </section>
 
@@ -138,8 +131,5 @@
     </div>
 
     <script src="app.js"></script>
-    <script>
-        if('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js');
-    </script>
 </body>
 </html>
