--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                     <i class="fa-solid fa-user"></i>
                     <input type="text" id="loginEmail" placeholder="Username / email" required>
                 </div>
-                
                 <div class="pill-input">
                     <i class="fa-solid fa-key"></i>
                     <input type="password" id="loginPass" placeholder="Password" required>
@@ -34,6 +33,7 @@
 
                 <div class="auth-actions">
                     <button type="submit" class="btn-pill primary">Login</button>
+                    </div>
                     <div class="auth-footer">
                         Belum punya akun? 
                         <span class="link-text" onclick="nav('signupPage')">Sign Up</span>
@@ -139,4 +139,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
 
