--- a/index.html
+++ b/index.html
@@ -125,11 +125,17 @@
                     <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
 
+                <div class="content-header">
+                    <div class="storage-widget">
+                </div>
+
                 <div class="breadcrumb-area">
-                    <h2 id="welcomeText">Welcome In Drive</h2>
+                    <div id="navButtons" class="nav-actions">
+                         <h2 id="welcomeText">Welcome In Drive</h2>
+                    </div>
                 </div>
             </div>
-
+                
             <div id="fileGrid" class="file-grid-area"></div>
         </div>
     </section>
@@ -185,3 +191,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
