--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Storage Tasks</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.1"></script>
     <link rel="manifest" href="manifest.json">
 </head>
@@ -16,28 +16,18 @@
     <section id="loginPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
             <div class="auth-header">
-                <img src="logo.png" alt="Storage Tasks" class="auth-logo">
+                <img src="logo.png" alt="Logo" class="auth-logo">
                 <h3>Login</h3>
             </div>
-
             <form id="loginForm">
+                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
                 <div class="pill-input">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" id="loginEmail" placeholder="Username / email" required>
-                </div>
-                
-                <div class="pill-input">
-                    <i class="fa-solid fa-key"></i>
-                    <input type="password" id="loginPass" placeholder="Password" required>
+                    <i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required>
                     <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
                 </div>
-
                 <div class="auth-actions">
                     <button type="submit" class="btn-pill primary">Login</button>
-                    <div class="auth-footer">
-                        Belum punya akun? 
-                        <span class="link-text" onclick="nav('signupPage')">Sign Up</span>
-                    </div>
+                    <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
                 </div>
             </form>
         </div>
@@ -46,40 +36,18 @@
     <section id="signupPage" class="full-screen-center hidden">
         <div class="glass-card auth-card">
             <div class="auth-header">
-                <img src="logo.png" alt="Storage Tasks" class="auth-logo">
+                <img src="logo.png" alt="Logo" class="auth-logo">
                 <h3>Sign Up</h3>
             </div>
-
             <form id="signupForm">
-                <div class="pill-input">
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" id="regName" placeholder="Username" required>
-                </div>
-                <div class="pill-input">
-                    <i class="fa-solid fa-envelope"></i>
-                    <input type="email" id="regEmail" placeholder="Email" required>
-                </div>
-                <div class="pill-input">
-                    <i class="fa-solid fa-phone"></i>
-                    <input type="tel" id="regPhone" placeholder="Phone">
-                </div>
-                <div class="pill-input">
-                    <i class="fa-solid fa-key"></i>
-                    <input type="password" id="regPass" placeholder="Password" required minlength="8">
-                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i>
-                </div>
-                <div class="pill-input">
-                    <i class="fa-solid fa-check-circle"></i>
-                    <input type="password" id="regVerify" placeholder="Verification password" required>
-                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i>
-                </div>
-
+                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="regName" placeholder="Username" required></div>
+                <div class="pill-input"><i class="fa-solid fa-envelope"></i><input type="email" id="regEmail" placeholder="Email" required></div>
+                <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone"></div>
+                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i></div>
+                <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verifikasi Password" required></div>
                 <div class="auth-actions">
                     <button type="submit" class="btn-pill primary">Sign Up</button>
-                    <div class="auth-footer">
-                        Sudah punya akun? 
-                        <span class="link-text" onclick="nav('loginPage')">Login</span>
-                    </div>
+                    <div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div>
                 </div>
             </form>
         </div>
@@ -87,9 +55,7 @@
 
     <section id="dashboardPage" class="dashboard-layout hidden">
         <header class="top-nav">
-            <div class="brand-area">
-                <img src="logo.png" alt="Logo" style="height: 50px;"> 
-            </div>
+            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 50px;"></div>
             <div class="profile-area">
                 <img src="user.jpg" alt="User" class="avatar">
                 <button id="logoutBtn" class="btn-pill small">LogOut</button>
@@ -101,15 +67,10 @@
                 <div class="new-btn-wrapper" id="dropdownContainer">
                     <button class="btn-pill new-btn" onclick="toggleDropdown()"><i class="fa-solid fa-plus"></i> New</button>
                     <div id="dropdownMenu" class="dropdown-content">
-                        <a onclick="createFolder()">
-                            <i class="fa-solid fa-folder-plus"></i> Folder Baru
-                        </a>
-                        <a onclick="triggerUploadModal()">
-                            <i class="fa-solid fa-cloud-arrow-up"></i> Upload File
-                        </a>
+                        <a onclick="createFolder()"><i class="fa-solid fa-folder-plus"></i> Folder Baru</a>
+                        <a onclick="triggerUploadModal()"><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</a>
                     </div>
                 </div>
-
                 <div class="search-bar-pill">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" id="searchInput" placeholder="Search in Storage Task">
@@ -119,31 +80,19 @@
             <div class="content-header">
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
-                    <div class="progress-track">
-                        <div id="storageBar" class="progress-fill" style="width: 0%;"></div>
-                    </div>
+                    <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
                     <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
-
-                <div class="content-header">
-                    <div class="storage-widget">
-                </div>
-
-                <div class="breadcrumb-area">
-                    <div id="navButtons" class="nav-actions">
-                         <h2 id="welcomeText">Welcome In Drive</h2>
-                    </div>
+                <div id="navButtons" class="breadcrumb-area">
+                    <h2 id="welcomeText">Welcome In Drive</h2>
                 </div>
             </div>
-                
+
             <div id="fileGrid" class="file-grid-area"></div>
         </div>
     </section>
 
-    <div id="loading" class="loading-overlay">
-        <div class="spinner"></div>
-        <p>Processing...</p>
-    </div>
+    <div id="loading" class="loading-overlay"><div class="spinner"></div><p>Processing...</p></div>
 
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
@@ -153,10 +102,7 @@
             </div>
             <div class="modal-body">
                 <p>Masukkan nama untuk folder baru Anda:</p>
-                <div class="pill-input">
-                    <i class="fa-solid fa-folder"></i>
-                    <input type="text" id="newFolderName" placeholder="Nama Folder (Contoh: Proyek A)" autocomplete="off">
-                </div>
+                <div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Nama Folder" autocomplete="off"></div>
             </div>
             <div class="modal-actions">
                 <button class="btn-pill secondary" onclick="closeModal('folderModal')">Batal</button>
@@ -191,4 +137,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
