--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
                 <h3>Login</h3>
             </div>
             <form id="loginForm">
-                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / Email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="loginEmail" placeholder="Username / email" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="loginPass" placeholder="Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
+                </div>
                 <div class="auth-actions">
                     <button type="submit" class="btn-pill primary">Login</button>
                     <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
@@ -41,18 +48,15 @@
                 <div class="pill-input"><i class="fa-solid fa-envelope"></i><input type="email" id="regEmail" placeholder="Email" required></div>
                 <div class="pill-input"><i class="fa-solid fa-phone"></i><input type="tel" id="regPhone" placeholder="Phone"></div>
                 <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="regPass" placeholder="Password" required minlength="8"><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regPass', this)"></i></div>
-                <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verifikasi Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i></div>
-                <div class="auth-actions">
-                    <button type="submit" class="btn-pill primary">Sign Up</button>
-                    <div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div>
-                </div>
+                <div class="pill-input"><i class="fa-solid fa-check-circle"></i><input type="password" id="regVerify" placeholder="Verification" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('regVerify', this)"></i></div>
+                <div class="auth-actions"><button type="submit" class="btn-pill primary">Sign Up</button><div class="auth-footer">Sudah punya akun? <span class="link-text" onclick="nav('loginPage')">Login</span></div></div>
             </form>
         </div>
     </section>
 
     <section id="dashboardPage" class="dashboard-layout hidden">
         <header class="top-nav">
-            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 45px;"></div>
+            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 50px;"></div>
             <div class="profile-area">
                 <img src="user.jpg" alt="User" class="avatar">
                 <button id="logoutBtn" class="btn-pill small">LogOut</button>
@@ -60,8 +64,7 @@
         </header>
 
         <div class="main-glass-panel">
-            
-            <div class="sidebar-action">
+            <div class="toolbar-row">
                 <div class="new-btn-wrapper" id="dropdownContainer">
                     <button class="btn-pill new-btn" onclick="toggleDropdown()"><i class="fa-solid fa-plus"></i> New</button>
                     <div id="dropdownMenu" class="dropdown-content">
@@ -69,27 +72,19 @@
                         <a onclick="triggerUploadModal()"><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</a>
                     </div>
                 </div>
+                <div class="search-bar-pill"><i class="fa-solid fa-magnifying-glass"></i><input type="text" id="searchInput" placeholder="Search in Storage Task"></div>
+            </div>
 
+            <div class="content-header">
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
                     <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
                     <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
+                <div class="breadcrumb-area"><h2 id="welcomeText">Welcome In Drive</h2></div>
             </div>
 
-            <div class="content-area">
-                <div class="search-bar-pill">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="text" id="searchInput" placeholder="Search in Storage Task">
-                </div>
-
-                <div class="breadcrumb-area">
-                    <h2 id="welcomeText">Welcome In Drive</h2>
-                </div>
-
-                <div id="fileGrid" class="file-grid-area">
-                    </div>
-            </div>
+            <div id="fileGrid" class="file-grid-area"></div>
         </div>
     </section>
 
@@ -97,21 +92,17 @@
 
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3>Folder Baru</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
-            <div class="modal-body"><p>Nama Folder:</p><div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Contoh: Tugas Akhir" autocomplete="off"></div></div>
+            <div class="modal-header"><h3><i class="fa-solid fa-folder-plus"></i> Folder Baru</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
+            <div class="modal-body"><p>Masukkan nama folder:</p><div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
             <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('folderModal')">Batal</button><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
         </div>
     </div>
 
     <div id="uploadModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
-            <div class="modal-header"><h3>Upload File</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i></div>
+            <div class="modal-header"><h3><i class="fa-solid fa-cloud-arrow-up"></i> Upload File</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('uploadModal')"></i></div>
             <div class="modal-body">
-                <div id="dropZone" class="drag-drop-area">
-                    <i class="fa-solid fa-cloud-arrow-up cloud-icon"></i><h4>Drag & Drop file</h4><p>atau</p>
-                    <button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih File</button>
-                    <input type="file" id="fileInputHidden" hidden>
-                </div>
+                <div id="dropZone" class="drag-drop-area"><i class="fa-solid fa-cloud-arrow-up cloud-icon"></i><h4>Drag & Drop file di sini</h4><p>atau</p><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih File</button><input type="file" id="fileInputHidden" hidden></div>
                 <p class="file-info" id="fileInfoText">Belum ada file dipilih</p>
             </div>
             <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('uploadModal')">Batal</button><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
