--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
                 <h3>Login</h3>
             </div>
             <form id="loginForm">
-                <div class="pill-input"><i class="fa-solid fa-user"></i><input type="text" id="loginEmail" placeholder="Username / email" required></div>
-                <div class="pill-input"><i class="fa-solid fa-key"></i><input type="password" id="loginPass" placeholder="Password" required><i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i></div>
-                <div class="auth-actions"><button type="submit" class="btn-pill primary">Login</button><div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div></div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="loginEmail" placeholder="Username / email" required>
+                </div>
+                <div class="pill-input">
+                    <i class="fa-solid fa-key"></i>
+                    <input type="password" id="loginPass" placeholder="Password" required>
+                    <i class="fa-solid fa-eye-slash toggle-eye" onclick="togglePass('loginPass', this)"></i>
+                </div>
+                <div class="auth-actions">
+                    <button type="submit" class="btn-pill primary">Login</button>
+                    <div class="auth-footer">Belum punya akun? <span class="link-text" onclick="nav('signupPage')">Sign Up</span></div>
+                </div>
             </form>
         </div>
     </section>
@@ -71,7 +81,7 @@
                     <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
                     <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
-                <div class="breadcrumb-area"><h2 id="headerTitle">Welcome In Drive</h2></div>
+                <div class="breadcrumb-area"><h2 id="welcomeText">Welcome In Drive</h2></div>
             </div>
 
             <div id="fileGrid" class="file-grid-area"></div>
