--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
                 <div class="storage-widget">
                     <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
                     <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
-                    <div class="storage-text"><span id="storageUsed">0.00 MB</span> / 2 GB</div>
+                    <div class="storage-text"><span id="storageUsed">0 MB</span> / 2 GB</div>
                 </div>
-                <div class="breadcrumb-area">
-                    <h2 id="welcomeText">Welcome In Drive Morning</h2>
-                </div>
+                <div class="breadcrumb-area"><h2 id="welcomeText">Welcome In Drive</h2></div>
             </div>
 
             <div id="fileGrid" class="file-grid-area"></div>
@@ -95,14 +93,8 @@
     <div id="folderModal" class="modal-overlay hidden">
         <div class="glass-card modal-box">
             <div class="modal-header"><h3><i class="fa-solid fa-folder-plus"></i> Folder Baru</h3><i class="fa-solid fa-xmark close-icon" onclick="closeModal('folderModal')"></i></div>
-            <div class="modal-body">
-                <p>Masukkan nama untuk folder baru Anda:</p>
-                <div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Nama Folder"></div>
-            </div>
-            <div class="modal-actions">
-                <button class="btn-pill secondary" onclick="closeModal('folderModal')">Batal</button>
-                <button class="btn-pill primary" onclick="submitCreateFolder()">Buat Folder</button>
-            </div>
+            <div class="modal-body"><p>Masukkan nama folder:</p><div class="pill-input"><i class="fa-solid fa-folder"></i><input type="text" id="newFolderName" placeholder="Nama Folder"></div></div>
+            <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('folderModal')">Batal</button><button class="btn-pill primary" onclick="submitCreateFolder()">Buat</button></div>
         </div>
     </div>
 
@@ -113,10 +105,7 @@
                 <div id="dropZone" class="drag-drop-area"><i class="fa-solid fa-cloud-arrow-up cloud-icon"></i><h4>Drag & Drop file di sini</h4><p>atau</p><button class="btn-pill small" onclick="document.getElementById('fileInputHidden').click()">Pilih File</button><input type="file" id="fileInputHidden" hidden></div>
                 <p class="file-info" id="fileInfoText">Belum ada file dipilih</p>
             </div>
-            <div class="modal-actions">
-                <button class="btn-pill secondary" onclick="closeModal('uploadModal')">Batal</button>
-                <button class="btn-pill primary" onclick="submitUploadFile()">Upload Sekarang</button>
-            </div>
+            <div class="modal-actions"><button class="btn-pill secondary" onclick="closeModal('uploadModal')">Batal</button><button class="btn-pill primary" onclick="submitUploadFile()">Upload</button></div>
         </div>
     </div>
 
