--- a/index.html
+++ b/index.html
@@ -77,9 +77,15 @@
                 </div>
 
                 <div class="storage-widget">
-                    <div class="storage-label"><i class="fa-solid fa-cloud"></i> Storage</div>
-                    <div class="progress-track"><div id="storageBar" class="progress-fill" style="width: 0%;"></div></div>
-                    <div class="storage-text"><span id="storageUsed">0.00 MB</span> / 2 GB</div>
+                    <div class="storage-label">
+                        <i class="fa-solid fa-cloud"></i> Storage
+                    </div>
+                    <div class="progress-track">
+                        <div id="storageBar" class="progress-fill" style="width: 0%;"></div>
+                    </div>
+                    <div class="storage-text">
+                        <span id="storageUsed">0.00 MB</span> / 2 GB
+                    </div>
                 </div>
             </aside>
 
