--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 </div>
 
                 <div class="storage-widget">
+                    <div class="storage-widget">
                     <div class="storage-label">
                         <i class="fa-solid fa-cloud"></i> Storage
                     </div>
