--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <aside class="sidebar-left">
                 <div class="new-btn-wrapper" id="dropdownContainer">
-                    <button class="btn-pill new-btn" onclick="toggleDropdown()">
+                    <button class="btn-pill new-btn" onclick="toggleDropdown(event)">
                         <i class="fa-solid fa-plus"></i> New
                     </button>
                     <div id="dropdownMenu" class="dropdown-content">
