--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="new-btn-wrapper" id="dropdownContainer">
                     <button class="btn-pill new-btn" onclick="toggleDropdown(event)">
                         <i class="fa-solid fa-plus"></i> New
+                        </button>
                     </button>
                     <div id="dropdownMenu" class="dropdown-content">
                         <a onclick="createFolder()"><i class="fa-solid fa-folder-plus"></i> Folder Baru</a>
