--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
     <section id="dashboardPage" class="dashboard-layout hidden">
         
         <header class="top-nav">
-            <div class="brand-area"><img src="logo.png" alt="Logo" style="height: 40px;"></div>
+            <div class="brand-area" onclick="goBack()" title="Kembali ke Beranda">
+                <img src="logo.png" alt="Logo" style="height: 40px;">
+            </div>
+            
             <div class="profile-area">
                 <img src="user.jpg" alt="User" class="avatar">
                 <button id="logoutBtn" class="btn-pill small logout-btn">LogOut</button>
